# SevenBot

./: .gitignore  LICENSE  Makefile  README.md  auto_updater.py  boot_manager.py  crowdin.yml  delete.py  load_save.py  main.py  pyproject.toml  pyvenv.cfg  requirements.txt  save.sample  start.sh  test.py
.github/ISSUE_TEMPLATE/: bug.md  config.yml  suggest.md
.github/workflows/: codeql-analysis.yml  pflake8.yml
cogs/: admin.py  auth.py  auto_text.py  automod.py  autoreply.py  batch.py  bump.py  channel_settings.py  cog.py  components.py  expand_message.py  fun.py  global.py  level.py  lock_message.py  moderation.py  music.py  panel.py  role_link.py  server_stats.py  template.py  ticket.py  timed_role.py  tools.py  topgg.py  tts.py
common_resources/: component.py  consts.py  lang_en.py  lang_ja.py  settings.py  tokens.py.sample  tools.py
djs_docs/: attrs.txt  classes.txt  methods.txt
dpy_docs/: attrs.txt  classes.txt  methods.txt
en/translations/en/: main
imagegen/: test.py
images/: queue.psd
translations/en/: main.json
translations/ja/: main.json
